# pico_hmi

./: CMakeLists.txt
ili9341/: CMakeLists.txt  CMakeListscopy.txt  demo_pixel.c  font.c  gameshared.c  gameshared.h  hw_config.c  ili9341.c  interface.c  interface.h  mainloop.c  mainloop.h  menu.c  mode0.c  mode0_ICON.c  mode0_demo.c  mode0_demoICON.c  mode0_demo_line.c  mode0_demohome.c  mode0_line.c  mode0demoall.c  mode0icon.c  pages.c  sdcard_console_v1.c
ili9341/games/: HC05.c  files.c  game01.c  game02.c  game03.c  game04.c  home.c  settings.c
ili9341/include/FatFs_SPI/sd_driver/: hw_config.h  sd_card.h
ili9341/include/font/: font.h
ili9341/include/icon/: icon.h
ili9341/include/mode0/: mode0.h
ili9341/include/pages/: pages.h
